--- a/src/app/calculator/calculator.component.css
+++ b/src/app/calculator/calculator.component.css
@@ -30,6 +30,7 @@ button {
     justify-content: space-around;
     align-items: stretch;
     width: 256px;
+    margin-left: 9px;
 }
 
 .button-item {
