--- a/src/app/calculator/calculator.component.html
+++ b/src/app/calculator/calculator.component.html
@@ -6,7 +6,7 @@
         <button class="button-item button-item--highlighted" (click)="clear()"> AC </button>
         <button class="button-item button-item--highlighted"  disabled> ( </button>
         <button class="button-item button-item--highlighted"  disabled> ) </button>
-        <button class="button-item button-item--highlighted" (click)="operator()" > / </button>
+        <button class="button-item button-item--highlighted" (click)="operator('/'')" > / </button>
         <button class="button-item" (click)="number('7')"> 7 </button>
         <button class="button-item" (click)="number('8')"> 8 </button>
         <button class="button-item" (click)="number('9')"> 9 </button>
